*Empty MediaWiki Message*

--- a/Satyajit_Ray.mw
+++ b/Satyajit_Ray.mw
@@ -22,86 +22,18 @@ Migdirek yang 36 a pelikula i Ray, kayabe la reng ''feature film'', documentary 
 
 Sinambut yang labing metung a galal a internasyunal ing mumuna nang pelikulang Ray, ing ''[[Pather Panchali]]'' (1955), kayabe ya ing ''Best Human Documentary'' king [Cannes Film Festival]]. Ining pelikula, ing ''[[Aparajito]]'' (1956) ampo ing ''[[The World of Apu|Apur Sansar]]'' (1959) bibilugan de ing ''[[The Apu Trilogy]]''. I Ray ing ginawa king [[screenplay|scripting]], casting, [[Film score|scoring]], ampong editing, at ya ing migdisenyu king sarili nang ''credit title'' ampong publisidad. Dakal ya tinggap a manimunang galal i Ray king kayang karera, kayabe la reng 32 Indian [[National Film Awards]], pilang galal kareng internasyunal a ''film festival'' ampong seremonyang pamamye galal, ampong [[Academy Award]] anyang 1992. Peparangalan ne nng [[Kapamahalan ning India]] kapamilatan ning [[Bharat Ratna]] anyang 1992.
 
+==Dalerayan==
+{{reflist}}
+
 ==Suglung palwal==
 {{IndicText}}
-*{{Wikiquote-inline|Satyajit Ray}}
 *{{Commons category-inline|Satyajit Ray}}
-<!--Don't add more external links here-->
 * [http://satyajitray.ucsc.edu/articles/karamchedu.html Experiencing Ray's "The Apu Trilogy" ]
 * [http://www.satyajitray.org.uk/ Satyajit Ray Foundation]
 * [http://www.satyajitray.org/ SatyajitRay.org]
 * {{IMDb name|6249|Satyajit Ray}}
 * {{cite web |url=http://www.britishcouncil.org/india-connecting-august2005-westindia-satyajit-ray.htm |title= Satyajit Ray: A Vision of Cinema |archiveurl=http://web.archive.org/web/20060104143026/http://www.britishcouncil.org/india-connecting-august2005-westindia-satyajit-ray.htm |archivedate=2006-01-04}} article by [[W. Andrew Robinson]]
 
-{{Works of Satyajit Ray}}
-{{Satyajit Ray}}
-{{Navboxes
-| title = Awards for Satyajit Ray
-| list =
-{{Bharat Ratna}}
-{{Dadasaheb Phalke Award}}
-{{NationalFilmAwardBestDirection}}
-{{NationalFilmAwardBestScreenplay}}
-{{NationalFilmAwardBestMusicDirection}}
-{{National Film Award Special Jury Award Feature Film}}
-{{RMA winners of India}}
-}}
-{{New Wave in cinema}}
-{{Cinema of Bengal}}
-
-{{featured article}}
 {{Authority control|PND=11926529X|LCCN=n/80/2447|VIAF=22147583|TSURL=Satyajit_Ray}}
 
-{{Persondata
-|NAME= Ray, Satyajit
-|ALTERNATIVE NAMES=সত্যজিৎ রায়
-|SHORT DESCRIPTION= Film maker, writer
-|DATE OF BIRTH= 2 May 1921
-|PLACE OF BIRTH=Calcutta, India
-|DATE OF DEATH=23 April 1992
-|PLACE OF DEATH=Calcutta
-}}
 {{DEFAULTSORT:Ray, Satyajit}}
-[[Category:Satyajit Ray| ]]
-[[Category:1921 births]]
-[[Category:1992 deaths]]
-[[Category:Academy Award winners]]
-[[Category:Academy Honorary Award recipients]]
-[[Category:Akira Kurosawa Award winners]]
-[[Category:Bengali film directors]]
-[[Category:Bengali-language science fiction writers]]
-[[Category:Bengali-language writers]]
-[[Category:Bengali writers]]
-[[Category:Brahmos]]
-[[Category:Dadasaheb Phalke Award recipients]]
-[[Category:Filmfare Awards winners]]
-[[Category:Indian children's book illustrators]]
-[[Category:Indian children's writers]]
-[[Category:Indian composers]]
-[[Category:Indian film producers]]
-[[Category:Indian film score composers]]
-[[Category:Indian Hindus]]
-[[Category:Indian illustrators]]
-[[Category:Indian science fiction writers]]
-[[Category:Indian screenwriters]]
-[[Category:Kolkata culture]]
-[[Category:Légion d'honneur recipients]]
-[[Category:National Film Award winners]]
-[[Category:Ordre des Arts et des Lettres recipients]]
-[[Category:People associated with Santiniketan]]
-[[Category:People from Kolkata]]
-[[Category:Presidency University, Kolkata alumni]]
-[[Category:Ramon Magsaysay Award winners]]
-[[Category:Recipients of the Ananda Purashkar]]
-[[Category:Recipients of the Bharat Ratna]]
-[[Category:Recipients of the Padma Bhushan]]
-[[Category:Recipients of the Padma Shri]]
-[[Category:Recipients of the Padma Vibhushan]]
-[[Category:Recipients of the Sangeet Natak Akademi Award]]
-[[Category:Recipients of the Sangeet Natak Akademi Fellowship]]
-[[Category:Silver Bear for Best Director recipients]]
-[[Category:University of Calcutta alumni]]
-[[Category:Visva-Bharati University alumni]]
-[[Category:Writers who illustrated their own writing]]
-[[Category:Best Director National Film Award winners]]
-[[Category:Best Music Direction National Film Award winners]]
