--- a/James_Joyce.mw
+++ b/James_Joyce.mw
@@ -3,6 +3,9 @@ I '''James Augustine Aloysius Joyce''' (2 Febrero 1882 – 13 Enero 1941) metung
 
 Mibait ya i Joyce king pamilyang kasantingan kabilyan king Dublin, nung nu ya mibabo antimong magaral kareng eskuwalang Jesuita ning [[Clongowes Wood College|Clongowes]] ampong [[Belvedere College|Belvedere]], at kaybat king [[University College Dublin]]. Anyang maygit yang beynti anyus, minalis yang permanenti king kontinenti ning Europa, at menuknangan ya king [[Trieste]], [[Paris]] ampong [[Zurich]]. Lipat ning menuknangan ya king kilwal king keraklan king bye na, e lulwalm king [[Dublin]], ing sikluban ning kayang panyulat, at deng tauan keti keraklan kalupa do reng kayabe king kayang pamilya, kalaban ampong kaluguran manibat king panaun a atyu karin; ing ''Ulysses'' lalu na, eksaktu ya pangabili kareng dalan na ampong eskinita ning kayang ciudad o lakanbalen. Anyang makuyad a panaun kaybat nang mibulalag ning ''Ulysses'', pepalinawan na ining kayang akaugalian, kareng amanung "Para kaku, pane kung susulat tungkul king Dublin, uling nung aluban ke ing pusu ning Dublin aluban ke ing pusu da reng anggang lakanbalen king yatu. King partikular o makabukud, makapalub ing pangsikluban." ("For myself, I always write about Dublin, because if I can get to the heart of Dublin I can get to the heart of all the cities of the world. In the particular is contained the universal.")<ref>Ellman, p. 505, citing Power, ''From an Old Waterford House'' (London, n.d.), pp. 63-64</ref>
 
+== Dalerayan ==
+{{reflist}}
+
 == Karagdagang babasan ==
 * [[Anthony Burgess|Burgess, Anthony]], ''Here Comes Everybody: An Introduction to James Joyce for the Ordinary Reader'', Faber & Faber (1965); (published in America as ''Re Joyce'') ASIN B000KW9R3Y; Hamlyn Paperbacks; Rev. ed edition (1982). ISBN 0-600-20673-4.
 *Burgess, Anthony, ''Joysprick: An Introduction to the Language of James Joyce'' (1973), [[Harcourt (publisher)|Harcourt]] (March 1975). ISBN 0-15-646561-2.
@@ -34,34 +37,6 @@ Mibait ya i Joyce king pamilyang kasantingan kabilyan king Dublin, nung nu ya mi
 * {{NRA | id=P15885}}
 * {{npg name|id=02467|name=James Joyce}}
 
-{{James Joyce}}
-{{featured article}}
 {{Normdaten|PND=118558501|LCCN=n/79/56824|VIAF=44300643}}
 
-{{Persondata
-|NAME=Joyce, James Augustine Aloysius
-|ALTERNATIVE NAMES=Seoighe, Seamus
-|SHORT DESCRIPTION=Irish writer and poet
-|DATE OF BIRTH=2 February 1882
-|PLACE OF BIRTH=Rathgar, Dublin, Ireland
-|DATE OF DEATH=13 January 1941
-|PLACE OF DEATH=Zurich, Switzerland
-}}
 {{DEFAULTSORT:Joyce, James}}
-[[Category:1882 births]]
-[[Category:1941 deaths]]
-[[Category:Alumni of University College Dublin]]
-[[Category:English as a Second Language teachers]]
-[[Category:Irish expatriates in Austria-Hungary]]
-[[Category:Irish expatriates in Croatia]]
-[[Category:Irish expatriates in France]]
-[[Category:Irish expatriates in Italy]]
-[[Category:Irish expatriates in Switzerland]]
-[[Category:Irish novelists]]
-[[Category:Irish poets]]
-[[Category:Irish short story writers]]
-[[Category:People from County Dublin]]
-[[Category:19th-century Irish people]]
-[[Category:People educated at Clongowes Wood College]]
-[[Category:Roman Catholic writers]]
-[[Category:James Joyce]]
