--- a/Template:Writingsystem-stub.mw
+++ b/Template:Writingsystem-stub.mw
@@ -1,5 +1,5 @@
 {{asbox
-| image     = quill_and_ink.svg
+| image     = Inkwell icon - Noun Project 2512.svg
 | pix       = 30
 | subject   = tungkul king [[sistema ning pamanyulat]] 
 | qualifier = 
