/* Alimbawa */ changed with better icon

--- a/Wikipedia:Suli.mw
+++ b/Wikipedia:Suli.mw
@@ -61,7 +61,7 @@ Nung atin kang aturung grupu da reng artikulung suli a e maliaring ilub king mat
 
 Ing metung a alimbawa ning stub template ya pin ing {{tlx|Writer-stub}}, a magpalto king:
 
-<div class="boilerplate metadata" id="stub"><table cellpadding="0" cellspacing="0" style="background-color: transparent"><tr ><td >[[Image:Quill and ink.svg|30px| ]]</td><td>''&nbsp;Ining artikulu tungkul king [[talasulat]], [[watas]] o [[dramaturgo]] metung yang [[Wikipedia:Stub#Ideal_stub_article|suli]].  Makasaup ka king Wikipedia kapamilatan ning [{{SERVER}}{{localurl:{{NAMESPACE}}:{{PAGENAME}}|action=edit}} pamandagdag kaniti]''.</td></tr></table></div>
+<div class="boilerplate metadata" id="stub"><table cellpadding="0" cellspacing="0" style="background-color: transparent"><tr ><td >[[File:Inkwell icon - Noun Project 2512.svg|30px| ]]</td><td>''&nbsp;Ining artikulu tungkul king [[talasulat]], [[watas]] o [[dramaturgo]] metung yang [[Wikipedia:Stub#Ideal_stub_article|suli]].  Makasaup ka king Wikipedia kapamilatan ning [{{SERVER}}{{localurl:{{NAMESPACE}}:{{PAGENAME}}|action=edit}} pamandagdag kaniti]''.</td></tr></table></div>
 
 Ing stub category a [[:Category:Writer stubs]], lilista no reng artikulung ating {{tlx|Writer-stub}} template.
 
