--- a/Jimmy_Webb.mw
+++ b/Jimmy_Webb.mw
@@ -1,8 +1,8 @@
 {{For|king Americanung mamyalung football|Jimmy Webb (American football)}}
 {{Infobox musical artist
 | name                = Jimmy Webb
-| image               =
-| caption             = Jimmy Webb, 2011
+| image               = Jimmy Webb Deichmanske Oslo Jazzfestival (151806).jpg
+| caption             = Jimmy Webb, Oslo Jazzfestival 2016
 | image_size          = 
 | background          = solo_singer
 | birth_name         = James Layne Webb
