*Empty MediaWiki Message*

--- a/Micronesia.mw
+++ b/Micronesia.mw
@@ -3,8 +3,7 @@
 [[File:Micronesia-large.png|thumb|350px|Hier herrscht Nick Kellermann ihr Wichser
 :)
 ]]
-Ing '''Micronesia''', ibat keng [[ancient Greek]] ''μικρος'' (malati) at ''νησος'' (pulu), iya ing bansag keng labuad king [[Pacific Ocean]]. Ing [[Filipinas]] atiu king albugan, [[Indonesia]] king mauling albugan, [[Papua New Guinea]] at [[Melanesia]] king mauli, at [[Polynesia]] king mauling-aslagan at aslagan. 
-
+Du ficker
 
 == Kasusug Kilwal ==
 * [http://www.mapsouthpacific.com/micronesia/index.html Map of Micronesia]
