*Empty MediaWiki Message*

--- a/Guyana.mw
+++ b/Guyana.mw
@@ -47,11 +47,7 @@
 |utc_offset_DST = 
 |cctld = [[.gy]]
 |calling_code = 592
-|footnotes = <sup>1</sup> note: Estimates for this country explicitly take into account the effects of excess mortality due to AIDS; this can result in lower life expectancy, higher infant mortality and death rates, lower population and growth rates, and changes in the distribution of population by age and sex than would otherwise be expected (July 2005 est.).
-<sup>2</sup> about 230,000 live in [[Georgetown, Guyana|Georgetown]]
-}}
-
-Ing '''Guyana''' ({{pronEng|ɡaɪˈænə}} or {{IPA|/ɡiːˈɑːnə/}}), opisyal a aus '''Co-operatibung Republica ning Guyana''' at sadia yang kebaluan bilang '''British Guiana''', iya mu ing  state na ning [[Commonwealth of Nations]] keng pungabun king [[Mauling America]]. Ing kayang sepu keng aslagan iyapin ing [[Suriname]], keng mauli ampong mauling albugan ing [[Brazil]], ampong keng albugan ing [[Venezuela]]. Keng kayang 215,000 km<sup>2</sup>, iti ing pangatlung malating state keng pungabun na ning Mauling America (kaibat na ning [[Suriname]] ampong [[Uruguay]]). Ing kayang populasyun mga 860,000 ya. Metung ya kareng apat a e [[Spanish language|magsaltiang Spanish]] a territoryu keng continenti, kambe ada reng states ning  Brazil ([[Portuguese language|Portuguese]]) ampong [[Suriname]] ([[Dutch language|Dutch]]), at ing French [[overseas region]] na ning [[French Guiana]] ([[French language|French]]). Pangkalinangan, ing Guyana makayanib ya kareng magsalitang [[English language|Englisha]] [[Caribbean]] states, kalupa da reng [[Jamaica]] ampong [[Trinidad at Tobago]].
+|footnotes 
 
 
 
