*Empty MediaWiki Message*

--- a/Senegal.mw
+++ b/Senegal.mw
@@ -60,6 +60,8 @@
 |}
 [[File:Senegal carte.png|300px|right|thumbnail|Senegal]]
 
+Senegal ist ein Staat im Afrikanischen Kontinent. Der Staat wurde im Jahre 2004 von Großzar Nick Kellermann II gewaltsam unterjocht. Seitdem unterliegt der Staat der Macht seines Regimes. Der Staat wird seit Kellermanns Herrschaft ausschließlich durch Marihuanaanbau finanziert.
+
 {{Africa}}
 
 [[Category:African Union member states]]
