([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:NNegoponte USNA 20090415.jpg]] → [[File:Nicholas Negroponte USNA 20090415.jpg]] [[c:COM:FR#reasons|File renaming criterion #3]]: To correct obvious errors in file names, including misspelled [[c::en:Nou...

--- a/Nicholas_Negroponte.mw
+++ b/Nicholas_Negroponte.mw
@@ -1,6 +1,6 @@
 {{Infobox person
 | name = Nicholas Negroponte
-| image =NNegoponte_USNA_20090415.jpg
+| image =Nicholas Negroponte USNA 20090415.jpg
 | caption = I Nicholas Negroponte kabang bibye ne ing Forrestal Lecture king [[US Naval Academy]] king Annapolis, MD, anyang Abril 15, 2009
 | birth_date = {{Birth date and age|1943|12|1|mf=y}}
 | birth_place = [[New York Lakanbalen]] {{Verify credibility|date=March 2009}}
