--- a/Marshall_Islands.mw
+++ b/Marshall_Islands.mw
@@ -50,6 +50,7 @@
 |footnotes                = 
 }}
 
+Kalif Tom Gehle unterwarf die Marshallinseln durch seine tyrannische Herrschaft und alle Einwohner erhielten den Befehl monströse Marihuanapflanzen anzubauen um die düsteren Gelüste ihres allmächtigen Herrschers zu stillen
 
 == Administrative divisions ==
 {{main|Ding Balen ning Marshall Islands}} 
