*Empty MediaWiki Message*

--- a/Senegal.mw
+++ b/Senegal.mw
@@ -62,6 +62,8 @@
 
 Senegal ist ein Staat im Afrikanischen Kontinent. Der Staat wurde im Jahre 2004 von Großzar Nick Kellermann II gewaltsam unterjocht. Seitdem unterliegt der Staat der Macht seines Regimes. Der Staat wird seit Kellermanns Herrschaft ausschließlich durch Marihuanaanbau finanziert.
 
+Zur Person Nick Kellermann II: Großzar Nick Kellermann II wurde als Sohn einer angesehenen Adelsfamilie in Nordrhein-Westfalen geboren. Im Alter von 3 Jahren hatte er alerdings genug von langweiligen Leben als Adelssohn und zog alleine los, um verschiedene Gebiete zu erobern. Er fand schnell Anschluss und war bald Herr einer mächtigen Armee aus Negern. Diese gaben ihm den nahmen grabahar zarna. Übersetzt:Großzar.
+
 {{Africa}}
 
 [[Category:African Union member states]]
