*Empty MediaWiki Message*

--- a/Marshall_Islands.mw
+++ b/Marshall_Islands.mw
@@ -47,10 +47,9 @@
 |utc_offset_DST           = 
 |cctld                    = [[.mh]]
 |calling_code             = 692
-|footnotes                = 
-}}
+|footnotes                
 
-Kalif Tom Gehle unterwarf die Marshallinseln durch seine tyrannische Herrschaft und alle Einwohner erhielten den Befehl monströse Marihuanapflanzen anzubauen um die düsteren Gelüste ihres allmächtigen Herrschers zu stillen
+Halts Maul Tom
 
 == Administrative divisions ==
 {{main|Ding Balen ning Marshall Islands}} 
