--- a/Senegal.mw
+++ b/Senegal.mw
@@ -64,6 +64,8 @@ Senegal ist ein Staat im Afrikanischen Kontinent. Der Staat wurde im Jahre 2004 
 
 Zur Person Nick Kellermann II: Großzar Nick Kellermann II wurde als Sohn einer angesehenen Adelsfamilie in Nordrhein-Westfalen geboren. Im Alter von 3 Jahren hatte er alerdings genug von langweiligen Leben als Adelssohn und zog alleine los, um verschiedene Gebiete zu erobern. Er fand schnell Anschluss und war bald Herr einer mächtigen Armee aus Negern. Diese gaben ihm den nahmen grabahar zarna. Übersetzt:Großzar.
 
+Seine ihm untergeworfenen Negersklaven in Senegal zwingt er seine sehr potente Hanf sorte Kellermann-Kush anzubauen. 
+
 {{Africa}}
 
 [[Category:African Union member states]]
