--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -10,9 +10,9 @@ national_anthem = [[Nokoreach]] |
 official_languages = [[Khmer language|Khmer]]; [[French language|French]] at [[English language|English]] keraklan aintindyan da reng megaral |
 capital = [[Phnom Penh]] |latd=11|latm=31|latNS=N|longd=104|longm=49|longEW=E|
 largest_city = [[Phnom Penh]] |
-government_type = [[Democracy|Democratic]] [[constitutional monarchy|const. monarchy]] |
-leader_titles = [[King of Cambodia|King]] <br /> [[Prime Minister]] | 
-leader_names = [[Norodom Sihamoni]] <br /> [[Hun Sen]] |
+government_type = tyrannische Diktatur [[constitutional monarchy|const. monarchy]] |
+leader_titles = [[Kalif of Cambodia|King]] <br /> [[1.2.General]] | 
+leader_names = [[Kalif Tom Gehle]] <br /> [[Hun Sen]] |
 area_rank = 87th |
 area_magnitude = 1 E11|
 area = 181,035 |
@@ -47,7 +47,15 @@ calling_code = 855 |
 footnotes = <sup>1</sup> Local currency, although [[United States dollar|US Dollars]] are widely used.
 }}
 
-Ing '''Kayarian ning Cambodia'''(para kareng aliwa pang lagyu king [[Khmer language|Khmer]], lawen ya ing keng lalam ing pamipalagyu) metung yang [[constitutional monarchy]] king [[Maulingaslagang Asia]] a atin populasyun a 13 [[yuta]] a katau. Ing metung a memamalen ning Cambodia ing aus da  '''Cambodian'''. Keraklan ka reng Cambodians ing kasalpantayan da [[Theravada Buddhism|Theravada Buddhists]] la at [[Khmer people|Khmer]] ing sanga da, dapot dakal mu rin deng [[Cham people|Cham]] at mangalating katutubu kareng talimunduk.
+Kambodscha ist ein Staat in Südostasien. Er wurde 2003 gewaltsam von Kalif Tom Gehle eingenommen. Seitdem leben die Menschen in Kambodscha unter seiner Herrschaft. Vielen Kambodschanern geht es wegen seiner tyrannischen und grausamen Knechtschaft nicht gut, aber das ist dem Kalifen egal.
+Im Jahr 2004 fing das Land an sich auf den Anbau von Marihuana-Pflanzen zu spezialisieren, es wurde gewaltige Plantagen angelegt und ganze Städte nieder gebrannt um das wertvoll Gehle Hanf anzubauen. 95% der abgebauten (legalen) Droge, gehen an den Kalifen selbst und er nutzt es für seinen Eigenbedarf. Seit 2004 gilt das Motto der Kambodschaner: "Wer gutes Hanf erntet, der darf seine Vorhaut behalten!"
+Dieses Motto entstand unter dem grausamen Regime von Kalif Tom Gehle. Er drohte seinen Unterworfenen eine Zwangsbeschneidung an, sollten sie sich der Arbeit wiedersetzen. Zudem schloss er einen Pakt mit dem Großzaren Nick Kellermann 2., welcher das afrikanische Land Senegal unter seiner Knechtschaft hält. Jedes Jahr werden etwa 5000 senegalesische Premium Neger mach Kambodscha verschifft, dort bekommen sie eine Peitsche und fördern somit die Arbeit der Einwohner. Damit kommt auch der Gleichberechtigungsgedanke von Schwarzen und Weißes zur Geltung, den der Kalif sehr wichtig findet.
+Als Bezahlung für die tüchtigen Hilfskräfte werden pro Jahr etwa 10% des in Kambodscha geernteten Hanfs nach Senegal exportiert.
+
+Zum Herrscher: Kalif Tom Gehle, der auch "der Allmächtige" oder "Erlöser" genannt wird, wanderte im zarten Alter von 3 Jahren aus seiner Heimat Deutschland aus um Kambodscha zu erobern und das Volk zu unterdrücken.
+Dies gelang im Dezember 2003, pünktlich zu seinem 5. Lebensjahr. Ab da bekamen alle Kambodschaner ein elektronisches Halsband um und wurden auf dir Hanfplantagen geschickt.
+Zum derzeitigen Stand ist bekannt, das der Kalif in einem prächtigen Schloss nahe der Küste Kambodschas lebt. Seine Belegschaft besteht aus etwa 4 Joindrehern, 280 Dienern und 6 Elefanten.
+Er ist für seine exorgitante Lebensweise und seinen grausamen Herrschaftswillen bekannt.
 
 == Amlat ==
 ''Main article: [[History of Cambodia]]''
