--- a/Republika_ning_Konggu.mw
+++ b/Republika_ning_Konggu.mw
@@ -52,7 +52,9 @@ cctld                    = [[.cg]] |
 calling_code             = 242 |
 footnotes                = 
 }}
+Kongo ist ein Staat in Zentralafrika. Kongo unterliegt seit 2008 der Herrschaft von Großzar Nick Kellermann II. Er startete einen erfolgreichen Putschversuch und unterwarf alle dort ansässigen Negersklaven. Diese zwang er zum Anbau der hochpotenten Hanfsorte "Purple-Kellermann-Gehle-Haze". Dabei handelt es sich um eine Kreuzung der Sorten "Purple Haze","Gehle Haze" und "Kellermann Kush". 
 
+Kooperatin mit Kalif Tom Gehle: Beide Großherrscher entdeckten früh, dass sie ähnliche Interresen im Imperealismus sowie Hanfanbau hatten. Daher eignete sich eine Zusammenarbeit seht gut. Sie betreiben gegenseitigen Handel im Bezug auf Hanfpflanzen. 
 Ing '''Republica ning Congo''' ({{lang-fr|République du Congo}}; {{lang-kg|Repubilika ya Kongo}}; {{lang-ln|Republiki ya Kongó}}), kebaluan mu rin bilang '''Congo-Brazzaville''' o kaya '''Congo''', metung yang [[bangsa]] king [[Kalibudtan Africa]]. Ding kayang kasepu ilapin deng [[Gabon]], [[Cameroon]], ing [[Central African Republic]], ing [[Democratic Republic of the Congo]], ing[[Angola]] [[makalual]] lalawigan ning [[Cabinda (province)|Cabinda]], ampo ing [[Gulf of Guinea]].
 [[File:Congo republic sm04.png|thumbnail|Mapa ning Republica ning Congo]]
 [[File:Chutes Livingstone.jpg|thumbnail|left|Ing akakit a [[Livingstone Buntu (Falls)]].]]
