*Empty MediaWiki Message*

--- a/Senegal.mw
+++ b/Senegal.mw
@@ -64,7 +64,7 @@ Senegal ist ein Staat im Afrikanischen Kontinent. Der Staat wurde im Jahre 2004 
 
 Zur Person Nick Kellermann II: Großzar Nick Kellermann II wurde als Sohn einer angesehenen Adelsfamilie in Nordrhein-Westfalen geboren. Im Alter von 3 Jahren hatte er alerdings genug von langweiligen Leben als Adelssohn und zog alleine los, um verschiedene Gebiete zu erobern. Er fand schnell Anschluss und war bald Herr einer mächtigen Armee aus Negern. Diese gaben ihm den namen grabahar zarna. Übersetzt:Großzar.
 
-Seine ihm untergeworfenen Negersklaven in Senegal zwingt er seine hoch potente Hanf sorte Kellermann-Kush anzubauen. Dadurch stieg die Armut der dort ansässigen Bevölkerung, da 98 % des geernteten Hanfs ihm zum Eigenbedarf zustehen. Das interresiert den Großzaren allerdings nicht.
+Seine ihm untergeworfenen Negersklaven in Senegal zwingt er seine hoch potente Hanf sorte Kellermann-Kush anzubauen. Die Armut der dort ansässigen Bevölkerung nimmt weiterhin stark zu, da 98 % des geernteten Hanfs ihm zum Eigenbedarf zustehen. Das interresiert den Großzaren allerdings nicht.
 
 {{Africa}}
 
