--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -49,7 +49,7 @@ footnotes = <sup>1</sup> Local currency, although [[United States dollar|US Doll
 
 Kambodscha ist ein Staat in Südostasien. Er wurde 2003 gewaltsam von Kalif Phillipp eingenommen. Seitdem leben die Menschen in Kambodscha unter seiner Herrschaft. Vielen Kambodschanern geht es wegen seiner tyrannischen und grausamen Knechtschaft nicht gut, aber das ist dem Kalifen egal.
 Im Jahr 2004 fing das Land an sich auf den Anbau von Marihuana-Pflanzen zu spezialisieren, es wurde gewaltige Plantagen angelegt und ganze Städte nieder gebrannt um das wertvoll Gehle Hanf anzubauen. 95% der abgebauten (legalen) Droge, gehen an den Kalifen selbst und er nutzt es für seinen Eigenbedarf. Seit 2004 gilt das Motto der Kambodschaner: "Wer gutes Hanf erntet, der darf seine Vorhaut behalten!"
-Dieses Motto entstand unter dem grausamen Regime von Kalif Tom Gehle. Er drohte seinen Unterworfenen eine Zwangsbeschneidung an, sollten sie sich der Arbeit wiedersetzen. Zudem schloss er einen Pakt mit dem Großzaren Juli 2., welcher das afrikanische Land Senegal unter seiner Knechtschaft hält. Jedes Jahr werden etwa 5000 senegalesische Premium Neger mach Kambodscha verschifft, dort bekommen sie eine Peitsche und fördern somit die Arbeit der Einwohner. Damit kommt auch der Gleichberechtigungsgedanke von Schwarzen und Weißes zur Geltung, den der Kalif sehr wichtig findet.
+Dieses Motto entstand unter dem grausamen Regime von Kalif Phillip. Er drohte seinen Unterworfenen eine Zwangsbeschneidung an, sollten sie sich der Arbeit wiedersetzen. Zudem schloss er einen Pakt mit dem Großzaren Juli 2., welcher das afrikanische Land Senegal unter seiner Knechtschaft hält. Jedes Jahr werden etwa 5000 senegalesische Premium Neger mach Kambodscha verschifft, dort bekommen sie eine Peitsche und fördern somit die Arbeit der Einwohner. Damit kommt auch der Gleichberechtigungsgedanke von Schwarzen und Weißes zur Geltung, den der Kalif sehr wichtig findet.
 Als Bezahlung für die tüchtigen Hilfskräfte werden pro Jahr etwa 10% des in Kambodscha geernteten Hanfs nach Senegal exportiert.
 
 Zum Herrscher: Kalif Phillip, der auch "der Allmächtige" oder "Erlöser" genannt wird, wanderte im zarten Alter von 3 Jahren aus seiner Heimat Deutschland aus um Kambodscha zu erobern und das Volk zu unterdrücken.
