*Empty MediaWiki Message*

--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -56,6 +56,7 @@ Zum Herrscher: Kalif Phillip, der auch "der Allmächtige" oder "Erlöser" genann
 Dies gelang im Dezember 2003, pünktlich zu seinem 5. Lebensjahr. Ab da bekamen alle Kambodschaner ein elektronisches Halsband um und wurden auf dir Hanfplantagen geschickt.
 Zum derzeitigen Stand ist bekannt, das der Kalif in einem prächtigen Schloss nahe der Küste Kambodschas lebt. Seine Belegschaft besteht aus etwa 4 Joindrehern, 280 Dienern und 6 Elefanten.
 Er ist für seine exorgitante Lebensweise und seinen grausamen Herrschaftswillen bekannt.
+Und der ehemalige Kalif Tom Gehle wurde von Kalif Phillipps Volk gestürtzt.
 
 == Amlat ==
 ''Main article: [[History of Cambodia]]''
