([[Commons:Commons:GlobalReplace|GlobalReplace v0.6.5]])

--- a/Canada.mw
+++ b/Canada.mw
@@ -125,7 +125,7 @@ Inyang [[1867]], king pamianib da reng atlung [[British North America]]n colonie
 | colpos = "7" rowpos = "4" style="text-align: center;" | 24
 |-
 ! style="text-align: center;" | [[File:Flag of Quebec.svg|30px]]
-! style="text-align: center;" | [[File:Coat of arms of Québec.svg|30px]]
+! style="text-align: center;" | [[File:Armoiries du Québec.svg|30px]]
 ! style="text-align: left;" | [[Quebec]]
 | style="text-align: center;" | QC
 | [[Quebec City]]
