*Empty MediaWiki Message*

--- a/Badajoz.mw
+++ b/Badajoz.mw
@@ -39,7 +39,7 @@ website = http://www.aytobadajoz.es/|
 postal_code = |
 area_code = 924|
 }}
-[[Image:Siege of Badajoz, by Richard Caton Woodville Jr.jpg|thumb|400px|<center>'''Bangkulungan ning Badajoz'''</center><center> Watercolour en grisaille by Richard Caton Woodville Jr. (1856-1927)</center>]]
+[[Image:Siege of Badajoz, by Richard Caton Woodville Jr.jpg|thumb|<center>'''Bangkulungan ning Badajoz'''</center><center> Watercolour en grisaille by Richard Caton Woodville Jr. (1856-1927)</center>]]
 [[Image:Badajoz.JPG|thumb|200px|right|La Giralda ampong ing Fine Arts Museum, king Badajoz.]]
 
 Ing '''Badajoz''' - (IPA {{IPA|[bað̞a'xoθ]}}, dati makasulat yang '''Badajos''' keng English), ing tungku na ning [[Spain|Espanyol]] a [[provinces of Spain|lalawigan]] ning [[Badajoz (lalawigan)|Badajoz]] king [[autonomous communities of Spain|autonomous community]] ning [[Extremadura]], atiu malapit keng sepu na ning [[Portugal|Portugal]], keng kaili ning ilug  [[Guadiana]], ampong ing [[Madrid]]-[[Lisbon]] a rili. Atin yang 145,257populasyun inyang 2007.
