--- a/Template:Embahada.mw
+++ b/Template:Embahada.mw
@@ -1,6 +1,7 @@
 {| style="border:1px solid #8888aa; background-color:#f7f8ff;padding:10px;font-size:95%;"
-|colspan="7"|<center>'''Malaus ko pu''' keng embahada ning '''[[Wikipedia:Patungkul|Wikipedia king Kapampangan!]]'''  Nung atin kayung ipasiag o atin kayung ikutang tungkul kareng pangkabilugan a yatung a pisasabian ning Wikipedia king Kapampangan, agkatan da kayung magpasiag keni o king bulung a pamisabi-sabi ning bulung a iti.</center><br/><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=new Mensahe para king Embahada]'''</center><br/>
-|----
+|colspan="4"|<center>'''Malaus ko pu''' keng embahada ning '''[[Wikipedia:Patungkul|Wikipedia king Kapampangan!]]'''  Nung atin kayung ipasiag o atin kayung ikutang tungkul kareng pangkabilugan a yatung a pisasabian ning Wikipedia king Kapampangan, agkatan da kayung magpasiag keni o king bulung a pamisabi-sabi ning bulung a iti.</center><br/><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=new Mensahe para king Embahada]'''</center>
+----
+|-valign="top" ---
 |'''''Welcome''' to the embassy of Kapampangan Wikipedia! If you have any announcements or questions regarding international issues of the Kapampangan Wikipedia, you are invited to post them here or on the discussion page of this article.<br /><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=new Message to the embassy]'''''</center>
 
 |'''''Maligayang pagdating''' sa embahada ng Wikipedia sa Kapampangan! Kung mayroon kayong mga pahayag o mga tanong tungkol sa mga pandaigdig na isyu ng Wikipedia sa Kapampangan, inaanyayahan namin kayong magpahayag dito o sa pahinang usapan ng artikulong ito.</center><br/><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=new Mensahe para sa Embahada]'''''</center><br/>
@@ -9,13 +10,22 @@
 
 |'''''Velkommen''' til ambassaden i Kapampangan Wikipedia! Hvis du har nogen meddelelser eller spørgsmål vedrørende internationale spørgsmål af Kapampangan Wikipedia, du er inviteret til at sende dem her eller på diskussionen side af denne artikel.<br /><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=new Anmeldelse til ambassaden]'''''</center>
 
-|'''''Bienvenue''' sur l'ambassade du Wikipédia dans la langue kapampangan! Si vous avez une annonce ou demande concernant les questions internationales ou le wikipédia en kapampangan, vous pouvez la formuler ici ou sur la page de discussion de cet article.<br /><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=new Consulter des ambassadeurs]'''''</center>
+|-valign="top" ---
+|
+----
+'''''Bienvenue''' sur l'ambassade du Wikipédia dans la langue kapampangan! Si vous avez une annonce ou demande concernant les questions internationales ou le wikipédia en kapampangan, vous pouvez la formuler ici ou sur la page de discussion de cet article.<br /><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=new Consulter des ambassadeurs]'''''</center>
 
-|'''''Bienvenido''' a la embajada de la Wikipedia capampangan. Si tienes cualquier pregunta o sugerencia sobre temas internacionales o la Wikipedia capampangan, estás invitado a colocarlas aquí o en la página de discusión de este artículo.<br /><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=new Mensaje para la Embajada]'''''</center>
+|
+----
+'''''Bienvenido''' a la embajada de la Wikipedia capampangan. Si tienes cualquier pregunta o sugerencia sobre temas internacionales o la Wikipedia capampangan, estás invitado a colocarlas aquí o en la página de discusión de este artículo.<br /><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=new Mensaje para la Embajada]'''''</center>
 
-|'''''Benvingut''' d'a l'Ambaixada Viquipèdia en l'idioma kapampangan! Si tens anunci o petició relació qüestions internacionals o Viquipèdia en kapampangan, podeu fer aquí oa la pàgina discussió aquest article.<br /><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=new Missatge per l'Ambaixada]'''''</center>
+|
+----
+'''''Benvingut''' d'a l'Ambaixada Viquipèdia en l'idioma kapampangan! Si tens anunci o petició relació qüestions internacionals o Viquipèdia en kapampangan, podeu fer aquí oa la pàgina discussió aquest article.<br /><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=new Missatge per l'Ambaixada]'''''</center>
 
-|'''欢迎'''来到邦板牙语维基百科！如果您有任何关于本维基百科跨语言事物的问题或建议，我们邀请您将它们发布在此处或本文的讨论页。<br 
+|
+----
+'''欢迎'''来到邦板牙语维基百科！如果您有任何关于本维基百科跨语言事物的问题或建议，我们邀请您将它们发布在此处或本文的讨论页。<br 
 /><center>'''[http://pam.wikipedia.org/w/index.php?title=Wikipedia_talk:Embahada&action=edit&section=给大使馆的新信息]'''</center>
 
 |}
