*Empty MediaWiki Message*

--- a/Wikipedia:Community_Portal.mw
+++ b/Wikipedia:Community_Portal.mw
@@ -601,16 +601,16 @@ Hi, apologies for posting this in English, but I wanted to alert your community 
 
 == Free Research Accounts from Leading Medical Publisher.  Come and Sign up! ==
 
-[[EN:W:TWL|The Wikipedia Library]] gets Wikipedia editors free access to reliable sources that are behind paywalls.  I want to alert you to our latest donation.
+[[:EN:W:TWL|The Wikipedia Library]] gets Wikipedia editors free access to reliable sources that are behind paywalls.  I want to alert you to our latest donation.
 *'''[[Cochrane Collaboration]]''' is an independent medical nonprofit organization that conducts systematic reviews of randomized controlled trials of health-care interventions, which it then publishes in the Cochrane Library.
 *Cochrane has generously agreed to give ''free, full-access accounts to medical editors''.  Individual access would otherwise cost between $300 and $800 per account.
 *'''If you are active as a medical editor, come and [[WP:COCHRANE|sign up :)]]'''
-Cheers, [[EN:W:User:Ocaasi|Ocaasi]] 21:16, 16 Juniu 2013 (UTC)
+Cheers, [[:EN:W:User:Ocaasi|Ocaasi]] 21:16, 16 Juniu 2013 (UTC)
 <!-- EdwardsBot 0487 -->
 
 == Cochrane Library Sign-up (correct link) ==
 
-My apologies for the incorrect link:  You can sign up for '''[[EN:W:Cochrane Collaboration|Cochrane Collaboration]]''' accounts at the [[EN:W:WP:COCHRANE|COCHRANE sign-up page]]'''. Cheers, [[EN:W:User:Ocaasi|Ocaasi]] 21:50, 16 Juniu 2013 (UTC)
+My apologies for the incorrect link:  You can sign up for '''[[:EN:W:Cochrane Collaboration|Cochrane Collaboration]]''' accounts at the [[:EN:W:WP:COCHRANE|COCHRANE sign-up page]]'''. Cheers, [[:EN:W:User:Ocaasi|Ocaasi]] 21:50, 16 Juniu 2013 (UTC)
 <!-- EdwardsBot 0488 -->
 
 == [[:m:Requests_for_comment/X!'s_Edit_Counter|X!'s Edit Counter]] ==
@@ -2731,7 +2731,7 @@ Hello Wikimedians!
 *'''[[:fi:Wikipedia:Wikipedian_Lähdekirjasto/Tilastopaja|Tilastopaja]]''' - Athletics statistics
 
 '''Expansions'''
-*'''[[en:WP:EBSCO|EBSCO]]''' - Many new databases added
+*'''[[:en:WP:EBSCO|EBSCO]]''' - Many new databases added
 *'''[[:en:WP:Taylor & Francis|Taylor & Francis]]''' - Strategic, Defence & Security Studies collection
 Many other partnerships with accounts available are listed on [[:m:The Wikipedia Library/Databases|our partners page]]. Sign up today!
 <br>--[[:m:The Wikipedia Library/Coordinators|The Wikipedia Library Team]] 18:30, 1 Nobyembri 2016 (UTC)
