--- a/Yasuhiro_Kobayashi.mw
+++ b/Yasuhiro_Kobayashi.mw
@@ -1,3 +1,3 @@
-I '''Yasuhiro Kobayashi''' (小林 靖宏 ''Kobayashi Yasuhiro'', mibait April 29, 1959), '''coba''', metung yang musikero king [[Hapon]].
+'''Yasuhiro Kobayashi''' (小林 靖宏 ''Kobayashi Yasuhiro'', mibait April 29, 1959), '''coba''', metung yang musikero king [[Hapon]].
 
 {{stub}}
