--- a/Armix.mw
+++ b/Armix.mw
@@ -3,7 +3,7 @@ canton= [[Canton of Virieu-le-Grand|Virieu-le-Grand]]|
 insee=01000|cp=01510 |maire= ?|mandat= [[2001]]-[[2008]]| intercomm= | longitude= |latitude= |alt moy= m |alt mini= |alt maxi= | hectares=  |km²= |sans= |
 date-sans=1999 |dens= |}}
 
-Ing '''Armix''' metung yang  [[commune in France|commune]] king  [[France|French]] ''[[département in France|département]]'' ning [[Ain]].
+Ing '''Armix''' metung yang  [[commune in France|commune]] king  [[France|pranses]] ''[[département in France|département]]'' ning [[Ain]].
 
 == Suglung Palwal ==
 *[http://joan-of-arc-studies.org/index.php?Gazetteer-Armix Gazetteer Entry]
