--- a/Template:EU_countries.mw
+++ b/Template:EU_countries.mw
@@ -2,7 +2,7 @@
 | Title = [[Pisanmetung a Europa]] (EU)
 | Image = [[Image:Flag_of_Europe.svg|70px|Bandera ning Pisanmetung a Europa]]
 | Color = 
-| List = [[Austria]] • [[Belgium]] • [[Cyprus]] • [[Czech Republic|Czech&nbsp;Republic]] • [[Denmark]] • [[Estonia]] • [[Finland]] • [[France]] • [[Germany]] • [[Greece]] • [[Hungary]] • [[Republic of Ireland|Ireland]] • [[Italy]] • [[Latvia]] • [[Lithuania]] • [[Luxembourg]] • [[Malta]] • [[Netherlands]] • [[Poland]] • [[Portugal]] • [[Slovakia]] • [[Slovenia]] • [[Espanya]] • [[Sweden]] • [[United Kingdom|United&nbsp;Kingdom]]<br>Acceding Countries: [[Bulgaria]] • [[Romania]]
+| List = [[Austria]] • [[Belgium]] • [[Bulgaria]] • [[Croatia]] • [[Cyprus]] • [[Czech Republic|Czech&nbsp;Republic]] • [[Denmark]] • [[Estonia]] • [[Finland]] • [[France]] • [[Germany]] • [[Greece]] • [[Hungary]] • [[Republic of Ireland|Ireland]] • [[Italy]] • [[Latvia]] • [[Lithuania]] • [[Luxembourg]] • [[Malta]] • [[Netherlands]] • [[Poland]] • [[Portugal]] • [[Romania]] • [[Slovakia]] • [[Slovenia]] • [[Espanya]] • [[Sweden]] • [[United Kingdom|United&nbsp;Kingdom]]  
 | Category = 
 }}<noinclude>
 [[Category:International organization navigational boxes|{{PAGENAME}}]]
