--- a/Template:Regions_of_France.mw
+++ b/Template:Regions_of_France.mw
@@ -5,9 +5,9 @@
 | state = {{{state|expanded}}} 
 |list1 = [[Alsace]] • [[Aquitaine]] • [[Auvergne (labuad)|Auvergne]] • [[Bourgogne]] • [[Bretagne]] • [[Centre (France)|Centre]] • [[Champagne-Ardenne]] • [[Corsica]] • [[Franche-Comté]] • [[Île-de-France (labuad)|Île-de-France]] • [[Languedoc-Roussillon]] • [[Limousin (labuad)|Limousin]] • [[Lorraine (labuad)|Lorraine]] • [[Midi-Pyrénées]] • [[Nord-Pas-de-Calais]] • [[Basse-Normandie]] • [[Haute-Normandie]] • [[Pays de la Loire]] • [[Picardie]] • [[Poitou-Charentes]] • [[Provence-Alpes-Côte d'Azur]] • [[Rhône-Alpes]]
 |group2 = 2016
-|list2 = [[Alsace-Champagne-Ardenne-Lorraine]] • [[Aquitaine-Limousin-Poitou-Charentes]] • [[Auvergne-Rhône-Alpes]] • [[Bourgogne-Franche-Comté]] • [[Bretagne]] • [[Centre-Val de Loire]] • [[Corsica]] • [[Île-de-France (labuad)|Île-de-France]] • [[Languedoc-Roussillon-Midi-Pyrénées]] • [[Nord-Pas-de-Calais-Picardie]] • [[Normandie]] • [[Pays de la Loire]] • [[Provence-Alpes-Côte d'Azur]]
+|list2 = [[Auvergne-Rhône-Alpes]] • [[Bourgogne-Franche-Comté]] • [[Bretagne]] • [[Centre-Val de Loire]] • [[Corsica]] • [[Grand-Est]] • [[Hauts-de-France]] • [[Île-de-France (labuad)|Île-de-France]] • [[Normandie]] • [[Nouvelle-Aquitaine]] • [[Occitanie]] • [[Pays de la Loire]] • [[Provence-Alpes-Côte d'Azur]]
 |group3 = '''[[Overseas regions of France|Overseas regions]]'''
-|list3 = [[French Guiana]] • [[Guadeloupe]] • [[Martinique]] • [[Réunion]]
+|list3 = [[French Guiana]] • [[Guadeloupe]] • [[Martinique]] • [[Mayotte]] • [[Réunion]]
 }}<noinclude>
 
 [[Category:French navigational boxes|{{PAGENAME}}]]
