*Empty MediaWiki Message*

--- a/Almario_de_Jesus.mw
+++ b/Almario_de_Jesus.mw
@@ -31,7 +31,7 @@ BAPU BIRJEN DE LOS REMEDIOS<br>
 INYANG MATULI YA Y ADAN<br>
 MARITES M. EVANGELISTA<br>
 MATWA NA ING BILI<br>
-POESYA CANG ATANACIA B. TAGLE<br>
+POESYA CANG Abt<br>
 
 
 [[Category: Kapampangan Watas]]
