--- a/Template:Cities_and_towns_in_Ostalbkreis_(district).mw
+++ b/Template:Cities_and_towns_in_Ostalbkreis_(district).mw
@@ -1,6 +1,6 @@
 {{Navbox
 |name=Lakanbalen at balen king Ostalbkreis (distritu)
-|image=[[Image:Wappen Ostalbkreis.png|right|30px|Sagkal ning armas]]
+|image=[[Image:Wappen Ostalbkreis.svg|right|30px|Sagkal ning armas]]
 |title=Ding Balen king [[Ostalbkreis]]
 |liststyle=font-size:95%;
 |list1= [[Aalen]]&nbsp;{{!}} <!--
