*Empty MediaWiki Message*

--- a/Andy_Murray.mw
+++ b/Andy_Murray.mw
@@ -59,7 +59,7 @@
 {{MedalBottom}}
 {{stack end}}
 
-I '''Andrew Barron "Andy" Murray''', {{small|[[Order of the British Empire|OBE]]}} (mibait 15 Mayo 1987) <!-- DO NOT CHANGE THIS NATIONALITY WITHOUT DISCUSSION ON TALK PAGE -->metung yang [[Scottish (lahi)|Scottish]]<!-- This is, as Wikipedia guidelines suggest, as he self-identifies and by long-term consensus --> a propesyonal a mamyalung tennis, a yang pangyatung No. 2<ref name="ATP" /> ampo ing [[Brit people|British]] No. 1 king Britania. Miras yang ranggung manimunang apulu (''top-10 ranking'') king [[Association of Tennis Professionals|ATP]] king mumunang pamikatagun anyang 16 April 2007, and reached a career peak of World No. 2 in August 2009, then again in April/May 2013.<ref>{{cite news|last=Jago|first=Richard|title=Andy Murray reaches world No2 rank after beating Jo-Wilfried Tsonga|date=15 August 2009|url=http://www.guardian.co.uk/sport/2009/aug/15/andy-murray-montreal-masters-jo-wilfried-tsonga|work=The Observer|accessdate=16 August 2010|location=London}}</ref> Ya ing tatalan king titulu ning [[US Open (tennis)|US Open]] ampo ning [[The Championships, Wimbledon|Wimbledon Championship]], at ya ing [[Tennis at the 2012 Summer Olympics|2012 Olympic tennis men's singles champion]].
+I '''Andrew Barron "Andy" Murray''', {{small|[[Order of the British Empire|OBE]]}} (mibait 15 Mayo 1987) metung yang [[British (lahi)|British]] a propesyonal a mamyalung tennis, a yang pangyatung No. 1<ref name="ATP" /> ampo ing [[Brit people|British]] No. 1 king Britania. Miras yang ranggung manimunang apulu (''top-10 ranking'') king [[Association of Tennis Professionals|ATP]] king mumunang pamikatagun anyang 16 April 2007, and reached a career peak of World No. 2 in August 2009, then again in April/May 2013.<ref>{{cite news|last=Jago|first=Richard|title=Andy Murray reaches world No2 rank after beating Jo-Wilfried Tsonga|date=15 August 2009|url=http://www.guardian.co.uk/sport/2009/aug/15/andy-murray-montreal-masters-jo-wilfried-tsonga|work=The Observer|accessdate=16 August 2010|location=London}}</ref> Ya ing tatalan king titulu ning [[US Open (tennis)|US Open]] ampo ning [[The Championships, Wimbledon|Wimbledon Championship]], at ya ing [[Tennis at the 2012 Summer Olympics|2012 Olympic tennis men's singles champion]].
 
 King [[2012 US Open – Men's Singles|2012 US Open]], i Murray ing mumunang mamyalung ibat Britania manibat 1977, ampo ing mumunang lalaking British manibat 1936, a sumambut [[Grand Slam (tennis)|Grand Slam]] singles tournament, anyang simbut ne i [[Novak Djokovic]] kareng limang set.<ref>{{cite news|title=US Open 2012 Final: Andy Murray first Brit to win Grand Slam men's singles title in 76 years|url=http://zeenews.india.com/sports/tennis/us-open-2012/us-open-andy-murray-first-brit-to-win-grand-slam-men-s-singles-title-in-76-years_748665.html|accessdate=11 September 2012}}</ref> Uli ning titulung iti, ya ing mumunang lalaki ibat king Britaniang maging kampeon king Grand Slam singles king [[Open Era]]. Anyang 7 Julio 2013, sinambut ya i Murray king [[2013 Wimbledon Championships – Men's Singles|2013 Wimbledon Championships]],<!--per [[WP:EGG]], ie: do not shorten/pipelink when the result is the title of a different article--> at  megi yang mumunang lalaking British a magtagumpe keti manibat kang [[Fred Perry]], [[1936 Wimbledon Championships - Men's Singles|77 nang banwa ing milabas]]. Simbut neng pasibayu i Djokovic king final, at ngeni kareng straight sets.<ref>{{cite news|url=http://www.bbc.co.uk/sport/0/tennis/23217393|title=Andy Murray beats Novak Djokovic to win Wimbledon|publisher=BBC Sport|last=Newbery|first=Piers|date=7 July 2013|accessdate=7 July 2013}}</ref>
 
