--- a/Belgorod_Oblast.mw
+++ b/Belgorod_Oblast.mw
@@ -36,7 +36,7 @@
 
 Ing '''Belgorod Oblast''' ({{lang-ru|Белгоро́дская о́бласть}}, ''Belgorodskaya oblast'') metung yang [[federal subjects of Russia|federal subject]] ning [[Russia]] (metung a [[oblast]]). Ing kayang kalibutarang administratibu iyapin ing lakanbalen ning [[Belgorod]].  Populasyun: 1,511,620 ([[Russian Census (2002)|2002 Census]]; 1,380,723 ([[Soviet Census (1989)|1989 Census]]).
 
-[[File:RTZ2.png|left|75px]]
+[[File:Map of Russia - Moscow time zone.svg|left|75px]]
 
 == Administratibung pangadake ==
 {{commonscat|Belgorod Oblast}}
