--- a/Kaluga_Oblast.mw
+++ b/Kaluga_Oblast.mw
@@ -38,7 +38,7 @@
 Ing '''Kaluga Oblast''' ({{lang-ru|Калу́жская о́бласть}}, ''Kaluzhskaya oblast'') metung yang  [[federal subjects of Russia|federal subject]] ning [[Russia]] (meting a [[oblast]]).  Ing kayang admistratibung kalibudtaran iyapin ing lakanbalen ning [[Kaluga]].
 
 === Oras Zona ===
-[[File:RTZ2.png|left|75px]]
+[[File:Map of Russia - Moscow time zone.svg|left|75px]]
 
 == Suglung Palwal ==
 * {{ru icon}} [http://www.admobl.kaluga.ru/ Official website of Kaluga Oblast]
