--- a/Kirov_Oblast.mw
+++ b/Kirov_Oblast.mw
@@ -38,7 +38,7 @@
 Ing '''Kirov Oblast''' ({{lang-ru|Ки́ровская о́бласть}}, ''Kirovskaya oblast'') metung yang  [[federal subjects of Russia|federal subject]] ning [[Russia]] (metung a [[oblast]]). Ing kayang administratibung pangadake iyapin ing [[types of inhabited localities in Russia|lakanbalen]] ning [[Kirov, Kirov Oblast|Kirov]].
 
 === Oras Zona ===
-[[File:RTZ2.png|left|75px]]
+[[File:Map of Russia - Moscow time zone.svg|left|75px]]
 
 == Administrative divisions ==
 {{Main|Administrative divisions of Kirov Oblast}}
