--- a/Kostroma_Oblast.mw
+++ b/Kostroma_Oblast.mw
@@ -36,7 +36,7 @@
 Ing '''Kostroma Oblast''' ({{lang-ru|Костромска́я о́бласть}}, ''Kostromskaya oblast'') metung yang  [[federal subjects of Russia|federal subject]] ning [[Russia]] (metung a [[oblast]]). Ing kayang administratibung kalibudtaran iyapin ing lakanbalen ning [[Kostroma]].
 
 === Oras Zona ===
-[[File:RTZ2.png|left|75px]]
+[[File:Map of Russia - Moscow time zone.svg|left|75px]]
 
 == Administrative divisions ==
 {{Main|Administrative divisions of Kostroma Oblast}}
