--- a/Moscow_Oblast.mw
+++ b/Moscow_Oblast.mw
@@ -38,7 +38,7 @@ Ing '''Moscow Oblast''' ({{lang-ru|Моско́вская о́бласть}}, ''
 
 
 === Oras zona ===
-[[File:RTZ2.png|left|75px]]
+[[File:Map of Russia - Moscow time zone.svg|left|75px]]
 
 == Administratibung pangadake ==
 {{Main|Administrative divisions of Moscow Oblast}}
