--- a/Murmansk_Oblast.mw
+++ b/Murmansk_Oblast.mw
@@ -7,7 +7,7 @@ Ing '''Murmansk Oblast''' ({{lang-ru|Му́рманская о́бласть}}, 
 
 
 === Oras zona ===
-[[File:RTZ2.png|left|75px]]
+[[File:Map of Russia - Moscow time zone.svg|left|75px]]
 
 == Demographicu ==
 Agpang keng ([[Russian Census (2002)|2002 Census]]), ing bangsang samut na ning oblast iyapin ing makatuki: <br />
