--- a/Nizhny_Novgorod_Oblast.mw
+++ b/Nizhny_Novgorod_Oblast.mw
@@ -38,7 +38,7 @@
 Ing kayang administratibung kalibudataran iyapin ing lakanbalen ning [[Nizhny Novgorod]].  Ing Nizhny Novgorod iya ing pekamaragul diling lakanbalen ning oblast a miki populasyun a 1.3 yuta at pangapat a pekamaragul diling lakanbalen keng Russian Federation, kaibat  [[Moscow]], [[Saint Petersburg]], ampong [[Novosibirsk]].
 
 === Oras Zona ===
-[[File:RTZ2.png|left|75px]]
+[[File:Map of Russia - Moscow time zone.svg|left|75px]]
 
 == Ayayakit ==
 [[File:Nizhny Novgorod Oblast map.png|250px|thumb|right|Mapa ning  Nizhny Novgorod Oblast]]
