--- a/Novgorod_Oblast.mw
+++ b/Novgorod_Oblast.mw
@@ -38,7 +38,7 @@
 '''Novgorod Oblast''' ({{lang-ru|Новгоро́дская о́бласть}}, ''Novgorodskaya oblast'') metung yang  [[federal subjects of Russia|federal subject]] ning [[Russia]] (metung a  [[oblast]]), atiu pilatan ning [[Moscow]] ampong [[Saint Petersburg]]. Ing kayang administratibung kalibudtaran iyapin ing lakanbalen ning [[Veliky Novgorod]]. 
 
 === Oras Zona ===
-[[File:RTZ2.png|left|75px]]
+[[File:Map of Russia - Moscow time zone.svg|left|75px]]
 
 Novgorod Oblast is located in the [[Moscow Time|Moscow Time Zone]] (MSK/MSD).  [[Coordinated Universal Time|UTC]] offset is +0300&nbsp;(MSK)/+0400&nbsp;(MSD).
 <div style="clear:left"></div>
