--- a/Oryol_Oblast.mw
+++ b/Oryol_Oblast.mw
@@ -8,7 +8,7 @@ Lualas: {{km2 to mi2|24700|precision=-1}}, populasyun: 860,262 (agpang inyang [[
 
 
 ===Oras zona===
-[[Image:RTZ2.png|75px|left]]
+[[Image:Map of Russia - Moscow time zone.svg|75px|left]]
 
 ==References==
 {{Reflist}}
