--- a/Penza_Oblast.mw
+++ b/Penza_Oblast.mw
@@ -35,7 +35,7 @@ Lualas: 43,200&nbsp;km²; populasyun: 1,452,941 (inyang [[Russian Census (2002)|
 
 == Geography ==
 === Oras zona ===
-[[File:RTZ2.png|75px|left]]
+[[File:Map of Russia - Moscow time zone.svg|75px|left]]
 
 
 == Suglung Palual ==
