--- a/Pskov_Oblast.mw
+++ b/Pskov_Oblast.mw
@@ -6,7 +6,7 @@
 Lualas: 55,300&nbsp;km². Populasyun: 760,810 ([[Russian Census (2002)|2002 Census]]), migbaba 846,449 mitala inyang [[Soviet Census (1989)|1989 Census]].
 
 === Oras zona ===
-[[File:RTZ2.png|75px|left]]
+[[File:Map of Russia - Moscow time zone.svg|75px|left]]
 
 
 == Administratibung pangadake ==
