--- a/Ryazan_Oblast.mw
+++ b/Ryazan_Oblast.mw
@@ -34,7 +34,7 @@ Ing '''Ryazan Oblast''' ({{lang-ru|Ряза́нская о́бласть}}, ''Ry
 
 
 === Oras zona ===
-[[File:RTZ2.png|75px|left]]
+[[File:Map of Russia - Moscow time zone.svg|75px|left]]
 
 == Administrative divisions ==
 {{Main|Administrative divisions of Ryazan Oblast}}
