--- a/Saratov_Oblast.mw
+++ b/Saratov_Oblast.mw
@@ -9,7 +9,7 @@ Lualas: 100,200&nbsp;km² ([[list of federal subjects of Russia by area|ranku pa
 
 == Geografia ==
 === Oras zona ===
-[[File:RTZ2.png|75px|left]]
+[[File:Map of Russia - Moscow time zone.svg|75px|left]]
 
 Ing Saratov Oblast atiu keng [[Moscow Time|Moscow Time Zone]] (MSK/MSD).  [[Coordinated Universal Time|UTC]] offset is +0300&nbsp;(MSK)/+0400&nbsp;(MSD).
 
