same file from commons

--- a/Ding_Lalawigan_ning_Vietnam.mw
+++ b/Ding_Lalawigan_ning_Vietnam.mw
@@ -1,4 +1,4 @@
-[[image:VietnameseProvincesMap_edited2.png|frame|150px|Administatibung Pangadake ning Socialistang Republica ning Vietnam]]
+[[image:VietnameseProvincesMap.png|frame|150px|Administatibung Pangadake ning Socialistang Republica ning Vietnam]]
 
 Ing [[Vietnam]] midake ya kareng '''59 a [[lalawigan]]''' (kebaluan keng [[Vietnamese amanu|Vietnamese]] bilang ''tỉnh'', ibat kareng Isik [[wikt:省|省]], shěng). Atin '''5 balen a makatalan kalibudatan''' a atiu bilang kapanteng antas ning lalawigan (''thành phố trực thuộc trung ương'').
 
