*Empty MediaWiki Message*

--- a/Damulag.mw
+++ b/Damulag.mw
@@ -22,7 +22,7 @@
 Ing '''damulag''',  carabao keng English, keng ([[Filipino language|Filipino]]: '''''kalabaw'''''; {{lang-ms|'''kerbau'''}})  o '''''Bubalus bubalis carabanesis''''' metung yang seseng animal lalam ning [[Domestic buffalo|water buffalo]] (''Bubalus bubalis'') mayayakit king [[Filipinas]], [[Guam]], ampong miyaliwang dake ning [[Mauling Asia]]. Deng damulag keraklan makaugne la kareng [[ortelanu]], pauli ning pinili la bilang gamit keng marangle keng pamangulyut keng [[sarul]] ampong keng [[gareta]] a pamanakut kareng mepupul papuntang keng palengki.
 
 [[Image:Carabao Cart.jpg|thumb|400px|left|Ing damulag atin gareta]]
-[[Image:An damulag 030.jpg|thumb|400px|left|]]
+[[Image:Carabao.jpg|thumb|400px|left|]]
 
 {{Symbols of the Philippines}}
 [[Category:Bovines]]
