*Empty MediaWiki Message*

--- a/Menila.mw
+++ b/Menila.mw
@@ -3,7 +3,7 @@
 
 {{Infobox Philippine City |
  infoboxtitle = Lakanbalen ning Menila|
- sealfile     = 250px-Ph_locator_ncr_manila.png |
+ sealfile     = Ph_locator_ncr_manila.png |
  region       = [[Keragulang Menila|National Capital Region]] |
  province     = — |
  founded      = [[Juniu 24]], [[1571]] |
