/* Foto */ bayung seksiyon/dake

--- a/Talk:George_W._Bush.mw
+++ b/Talk:George_W._Bush.mw
@@ -1,1 +1,5 @@
 This article is written in English, which is inapropriate for pam.wikipedia.org. [[User:89.57.139.45|89.57.139.45]] 13:01, 8 March 2006 (UTC)
+
+== Foto ==
+
+local [[File:George_W_Bush.jpg]], same in Commons https://commons.wikimedia.org/wiki/File:George-W-Bush.jpeg
