--- a/Talk:George_W._Bush.mw
+++ b/Talk:George_W._Bush.mw
@@ -2,4 +2,4 @@ This article is written in English, which is inapropriate for pam.wikipedia.org.
 
 == Foto ==
 
-local [[File:George_W_Bush.jpg]], same in Commons https://commons.wikimedia.org/wiki/File:George-W-Bush.jpeg
+local [[:File:George_W_Bush.jpg]], same in Commons https://commons.wikimedia.org/wiki/File:George-W-Bush.jpeg
