--- a/Almería_(lalawigan).mw
+++ b/Almería_(lalawigan).mw
@@ -1,8 +1,8 @@
 {{Spanish Province
 |name = Almería
 |full-name = Almería
-|flag = Bandera provincia de almeria.png
-|coat-of-arms = Escudo de la provincia de Almería.svg
+|flag = Flag Almería Province.svg
+|coat-of-arms = Escudo de la Provincia de Almería.svg
 |motto = 
 |anthem = 
 |map = Provincia Almería.png 
