Miurung la reng in-edit nang [[Special:Contributions/Raamaturott|Raamaturott]] ([[User talk:Raamaturott|Pamisabi-sabi]]); binalik neng [[User:Magioladitis|Magioladitis]] king tauling bersion

--- a/Sistemang_immune.mw
+++ b/Sistemang_immune.mw
@@ -5,6 +5,17 @@ Deng pathogen o ahenti ning sakit malagwa lang magbayu ampong bumage ba rang lis
 
 ==Lon la murin==
 {{Commons category|Immunology}}
+*[[Clonal selection]]
+*[[Hapten]]
+*[[Human physiology]]
+*[[Immunoproteomics]]
+*[[Immunostimulator]]
+*[[Original antigenic sin]]
+*[[Antigen#Tumor antigens|Tumor antigens]]
+*[[Immune system receptors]]
+*[[Polyclonal response]]
+*[[Plant disease resistance]]
+*[[Immune network theory]]
 
 ==Dalerayan==
 {{Reflist|2}}
@@ -13,3 +24,14 @@ Deng pathogen o ahenti ning sakit malagwa lang magbayu ampong bumage ba rang lis
 *[http://uhaweb.hartford.edu/BUGL/immune.htm Immune System] - from the [[University of Hartford]] (high school/undergraduate level)
 *[http://pathmicro.med.sc.edu/book/immunol-sta.htm Microbiology and Immunology On-Line Textbook] - from the [[University of South Carolina]] School of Medicine (undergraduate level)
 *[http://www.ncbi.nlm.nih.gov/books/bv.fcgi?call=bv.View..ShowTOC&rid=imm.TOC&depth=10 Immunobiology; Fifth Edition]&nbsp;– Online version of the textbook by [[Charles Janeway]] (Advanced undergraduate/graduate level)
+
+{{immune system}}
+{{lymphatic system}}
+{{System and organs}}
+{{Immune receptors}}
+{{Use dmy dates|date=September 2010}}
+{{Featured article}}
+
+{{DEFAULTSORT:Immune System}}
+[[Category:Immune system|*]]
+[[Category:Immunology]]
