Miurung la reng in-edit nang [[Special:Contributions/Raamaturott|Raamaturott]] ([[User talk:Raamaturott|Pamisabi-sabi]]); binalik neng [[User:EmausBot|EmausBot]] king tauling bersion

--- a/Paul_McCartney.mw
+++ b/Paul_McCartney.mw
@@ -166,6 +166,7 @@ Meging parte ya kareng proyektung mag-promote kareng (international) na kawang g
 
 {{The Beatles}}
 
+{{Featured article}}
 {{Authority control|PND=118575708|LCCN=n/50/12135|VIAF=100252012}}
 
 {{Persondata
@@ -177,8 +178,57 @@ Meging parte ya kareng proyektung mag-promote kareng (international) na kawang g
 | DATE OF DEATH     =
 | PLACE OF DEATH    =
 }}
-
 {{DEFAULTSORT:Mccartney, Paul}}
 [[Category:Paul McCartney| ]]
+[[Category:1942 kebaitan]]
+[[Category:20th-century classical composers]]
+[[Category:20th-century English singers]]
+[[Category:21st-century English singers]]
+[[Category:Animal rights advocates]]
+[[Category:Backing vocalists]]
+[[Category:Best Original Music Score Academy Award winners]]
+[[Category:Brit Award winners]]
+[[Category:British people convicted of drug offences]]
+[[Category:Capitol Records artists]]
+[[Category:Composers awarded knighthoods]]
+[[Category:English billionaires]]
+[[Category:English composers]]
+[[Category:English male singers]]
+[[Category:English multi-instrumentalists]]
+[[Category:English people of Irish descent]]
+[[Category:English pop singers]]
+[[Category:English rock bass guitarists]]
+[[Category:English rock guitarists]]
+[[Category:English rock pianists]]
+[[Category:English rock singers]]
+[[Category:English singer-songwriters]]
+[[Category:Fellows of the American Academy of Arts and Sciences]]
+[[Category:Grammy Award-winning artists]]
+[[Category:Grammy Lifetime Achievement Award winners]]
+[[Category:Honorary Members of the Royal Academy of Music]]
+[[Category:Ivor Novello Award winners]]
+[[Category:James McCartney]]
+[[Category:Kennedy Center honorees]]
+[[Category:Knights Bachelor]]
 [[Category:Mabieng tau]]
+[[Category:McCartney family]]
+[[Category:Members of the Order of the British Empire]]
+[[Category:Mercury Records artists]]
+[[Category:Musicians awarded knighthoods]]
+[[Category:Parlophone artists]]
+[[Category:People educated at Liverpool Institute High School for Boys]]
+[[Category:Pop singer-songwriters]]
+[[Category:Ragtime composers]]
+[[Category:Recipients of the Order of Merit (Chile)]]
+[[Category:Recipients of the Order of the Sun of Peru]]
+[[Category:Rock and Roll Hall of Fame inductees]]
+[[Category:Rock singer-songwriters]]
+[[Category:Silver Clef Awards winners]]
+[[Category:Singers awarded knighthoods]]
+[[Category:Singers with a four octave vocal range]]
+[[Category:Songwriters Hall of Fame inductees]]
 [[Category:Deng Beatles, kayanib]]
+[[Category:The Quarrymen members]]
+[[Category:Transcendental Meditation practitioners]]
+[[Category:Wings (band) members]]
+[[Category:Academics of the Liverpool Institute for Performing Arts]]
