Miurung la reng in-edit nang [[Special:Contributions/Raamaturott|Raamaturott]] ([[User talk:Raamaturott|Pamisabi-sabi]]); binalik neng [[User:CommonsDelinker|CommonsDelinker]] king tauling bersion

--- a/Seattle,_Washington.mw
+++ b/Seattle,_Washington.mw
@@ -1,3 +1,4 @@
+{{redirect|Seattle}}
 {{Infobox City
 |official_name = Lakanbalen ning Seattle
 |image_skyline = Wiki_seattle_alki_01.jpg
@@ -97,6 +98,25 @@ Image:0402071706.jpg|Pike Place Market
 Image:0402071705.jpg|Pike Place Market
 </gallery>
 
+== See also ==
+* [[Arts in Seattle]]
+* [[Demographics of Seattle]]
+* [[List of companies based in Seattle]]
+* [[List of people from Seattle]]
+* [[List of University of Washington people|List of famous University of Washington people]]
+* [[List of representations of Seattle in popular culture]]
+* [[List of United States metropolitan statistical areas by population]]
+* [[List of Seattle parks]]
+* [[List of Seattle sister cities]]
+* [[Music of Washington]], especially [[grunge music]]
+* [[Port of Seattle]]
+* [[Seattle Bus Tunnel]]
+* [[Seattle metropolitan area]]
+* [[Seattle neighborhoods]]
+* [[Seattle Police Department]]
+* [[Seattle Public Library]]
+* [[Seattle Underground]]
+
 == External links ==
 {{Commons|Seattle|Seattle}}
 * [http://www.seattle.gov/ Official website]
@@ -131,8 +151,19 @@ Image:0402071705.jpg|Pike Place Market
 ** Nearby hiking trails on [http://www.hikipedia.com/hiki/search/search?distance=1&distance_radius=50&distance_from=Seattle,%20WA Hikipedia]
 
 {{Washington}}
+{{Seattle neighborhoods|nocat=true}}
 {{USLargestCities}}
+{{featured article}}
 
 == Dakal pang pamamasa ==
 
 * Pierce, J. Kingston. ''Eccentric Seattle: Pillars and Pariahs Who Made the City Not Such a Boring Place After All.'' Pullman, Washington: Washington State University Press, 2003. ISBN 978-0-87422-269-2
+
+<!--Categories-->
+<!--Interlanguage links-->
+
+[[Category:1850s establishments]]
+[[Category:Seattle, Washington| ]]
+[[Category:King County, Washington]]
+[[Category:Cities in the Seattle metropolitan area]]
+[[Category:County seats in Washington]]
