/* Deng Balen */ tae dako123

--- a/Bukidnon.mw
+++ b/Bukidnon.mw
@@ -32,6 +32,7 @@ Agpang keng amlat menibat keng asbuk da reng [[katutubu]] ning Bukidnon, atin ap
 ==Amlat==
 
 
+tae dako123
 ==Geografia==
 
 ===Politika===
