*Empty MediaWiki Message*

--- a/Catalonia.mw
+++ b/Catalonia.mw
@@ -5,7 +5,7 @@
 |full-name =  {{lang|ca|''Catalunya''}} {{ca icon}}<br />{{lang|es|''Cataluña''}} {{es icon}}<br />{{lang|oc|''Catalonha''}} {{oc icon}}<br /> Catalonia
 |coat-of-arms = Escudo_de_Cataluña.svg
 |flag = Flag_of_Catalonia.svg
-|map = Localització de la CA de Catalunya.png
+|map = E.U-Catalonia.png
 |country = [[Spain]]
 |anthem = {{lang|ca|''[[Els Segadors]]''}}
 |capital = [[Barcelona]]
@@ -27,7 +27,7 @@
 current: [[August 9]], [[2006]]
 |congress = 47
 |senate = 16
-|president = [[José Montilla|José Montilla Aguilera]] ([[Partit dels Socialistes de Catalunya|PSC]])
+|president = [[José Montilla|José Montilla Aguilera]] ([[Partit Demòcrata Europeu Català|PDECAT]])
 |president-link = List of Presidents of Catalonia
 |code = CT
 |website = [http://www.gencat.cat/index_eng.htm Generalitat de Catalunya]
